# memclave-ime

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  blocks.md  debug.sh  iram.awk  iram.sh  loading.md  mainpage.dox  mbedtls_config.h  opcode.md  opcode.sh  opdiff.py  readelf.sh  run.sh  scan.py  sk.sh  testvec.py
docs/: benchmarks.md  keyexchange.md  loading.md  messaging.md  opcode.md  setup.md  subkernel.md  threads.md
ld/: core.ld  user.ld
src/: boot.s  chacha.c  chacha.h  core.c  core.h  core.s  main.c
src/BFS/: dpu-utils.h  main.c
src/BFS/support/: common.h  mc_sync.h
src/BS/: main.c
src/BS/support/: common.h
src/HST-L/: main.c  main_bkp
src/HST-L/support/: common.h  memclave_mutex.h
src/HST-S/: main.c
src/MLP/: main.c  main_mlp.c
src/MLP/support/: common.h  log.h  mc_sync.h
src/NW/: main.c
src/NW/support/: mc_sync.h
src/RED/: main.c
src/RED/support/: common.h
src/SCAN-RSS/: main.c
src/SCAN-RSS/support/: common.h
src/SCAN-SSA/: main.c  main_working_bkp
src/SCAN-SSA/support/: common.h
src/SEL/: main.c
src/SEL/support/: common.h  log.h
src/SpMV/: main.c
src/TRNS/: main.c
src/TRNS/support/: common.h
src/TS/: .main.c.swp  .temp.c.swp  main.c
src/TS/support/: common.h
src/UNI/: main.c
src/UNI/support/: common.h
src/VA/: main.c
src/VA/support/: common.h  log.h  timer.h
src/add/: main.c
src/chacha-bench/: main.c
src/common/: global.c  global.h
src/core/: aead.c  aead.h  boot.h  boot.s  chacha.S  core.c  core.h  core.s  core_crypt.c  core_iram.s  core_load.S  core_load.s  core_mem.s  core_scan.c  core_stats.S  core_stats.c  core_thrd.s  core_util.s  core_wram.s  main.c  poly.c  poly.s
src/crypto-bench/: main.c
src/dma/: main.c
src/fsl/: .gitignore  CMakeLists.txt  README.md  arrfy.py  boot.S  iram.sh  link.ld  main.c  mbedtls_config.h  replace.S  sk.py
src/gemv/: main.c  main_gemv.c
src/gemv/support/: common.h
src/ime-rt/: aead.c  aead.h  barrier.c  barrier.h  boot.s  ime.c  ime.h
src/keyexchange/: CMakeLists.txt  common.h  main.c  mbedtls_config.h  stage1.c  stage2.c  stage3.c
src/mbench/: main.c
src/mbench/support/: common.h  log.h
src/msg/: boot.s  main.c
src/multi-tasklet/: main.c
src/poly/: poly.S  poly.h
src/sk-load-bench/: main.c
src/stop/: main.c
src/user/: aead.c  aead.h  boot.s  chacha.S  main.c  poly.S  poly.c  poly.h
src/user-crypto/: main.c
src/wram2/: main.c
tools/: dpurun.c
tools/sk/: main.py
tpm_expt/: attester.sh  dpu.img  initializer.sh  user.img  verifier.sh
